Fixed a few layout issues. Updated content.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,5 +20,9 @@ html {
 }
 
 .kontener-b {
-  @apply max-w-[90%] w-full h-full justify-center items-center mx-auto p-4 gap-4 shadow-md rounded-sm;
+  @apply min-h-[50vh] max-w-[90%] w-full h-full justify-center items-center mx-auto gap-4 shadow-md rounded-sm;
+}
+
+.card-effect {
+  @apply hover:scale-105 hover:-rotate-3 hover:shadow-lg ease-in-out duration-100;
 }
